Show a warning on the post index page and front page where there are no visible authors. Fixes #2584.
git-svn-id: file:///Users/gauthierm/svnrepo/public/blorg/trunk@55545 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/admin/styles/blorg-front-page.css
+++ b/www/admin/styles/blorg-front-page.css
@@ -38,6 +38,7 @@
 	padding-left: 2em;
 }
 
+a#manage_authors,
 a#new_post {
 	display: block;
 	float: left;
@@ -46,8 +47,13 @@ a#new_post {
 	background-color: #fdf2c0;
 }
 
+a#manage_authors:hover,
 a#new_post:hover {
 	background-color: #f8ecb7;
+}
+
+a#manage_authors {
+	padding-left: 8px;
 }
 
 .clear-fix {
